Java 17 improvements. Test fixes. Libraries updates